<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gymbackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/my_dashboard"
            android:textColor="@color/Orange"
            android:textSize="24sp" />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_margin="5dp"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center_horizontal"
            android:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/White"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/grdvProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="ProfileActivity"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="18dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/profile" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:text="@string/profile"
                        android:textColor="@color/Orange"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/White"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/grdvGoals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="showGoalsMessage"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgGoals"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="18dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/goal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:text="@string/goals"
                        android:textColor="@color/Orange"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/White"
                android:onClick="scheduleActivity"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/grdvSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgSchedule"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="18dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/calendar" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:text="@string/schedule"
                        android:textColor="@color/Orange"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/White"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/grdvStatistics"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="showStatsMessage"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgStatistics"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="18dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/statistics" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:text="@string/statistics"
                        android:textColor="@color/Orange"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/White"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/grdvExercises"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="exerciseActivity"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgExercise"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="18dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/weight" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:text="@string/exercises"
                        android:textColor="@color/Orange"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/White"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/grdvFood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="foodActivity"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFood"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="18dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/camera" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:text="@string/food"
                        android:textColor="@color/Orange"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>


</ScrollView>